#5 retrieve and display connected devices via a textview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PocketCleric</string>
+    <string name="get_connected_devices">Get Connected Devices</string>
 </resources>
