--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,5 @@
 
     <string name="row_mac_address">mac address</string>
     <string name="row_device">device</string>
-    <string name="row_is_reachable">is reachable</string>
+    <string name="row_disconnected">disconnected</string>
 </resources>
