Added guest button to main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
 
     <string name="pulse">Pulse</string>
     <string name="logout">Logout</string>
+    <string name="guest_label">Guest</string>
 </resources>
